force-app/main/default/objects/Matching__c/Matching__c.object-meta.xml
<CustomObject>
    <label>マッチング</label>
    <nameField>
        <label>マッチング名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>