force-app/main/default/objects/Matching__c/fields/AccompanyingDocumentName2__c.field-meta.xml
<CustomField>
    <fullName>AccompanyingDocumentName2__c</fullName>
    <label>付随書類名２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>