force-app/main/default/objects/Matching__c/fields/AccompanyingDocumentName4__c.field-meta.xml
<CustomField>
    <fullName>AccompanyingDocumentName4__c</fullName>
    <label>付随書類名４</label>
    <length>255</length>
    <type>Text</type>
</CustomField>