force-app/main/default/objects/Matching__c/fields/BillingKeyMoney__c.field-meta.xml
<CustomField>
    <fullName>BillingKeyMoney__c</fullName>
    <label>請求権利金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>