force-app/main/default/objects/Matching__c/fields/BillingNextMonthManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthManagementCharge__c</fullName>
    <label>請求翌月管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>