force-app/main/default/objects/Matching__c/fields/BillingNextMonthRent__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthRent__c</fullName>
    <label>請求翌月家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>