force-app/main/default/objects/Matching__c/fields/BillingNextMonthWhatMonth__c.field-meta.xml
<CustomField>
    <fullName>BillingNextMonthWhatMonth__c</fullName>
    <label>請求翌月は何月</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>