force-app/main/default/objects/Matching__c/fields/BillingThisMonthParkingFee__c.field-meta.xml
<CustomField>
    <fullName>BillingThisMonthParkingFee__c</fullName>
    <label>請求当月駐車場代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>