force-app/main/default/objects/Matching__c/fields/BorrowerCancelNotice__c.field-meta.xml
<CustomField>
    <fullName>BorrowerCancelNotice__c</fullName>
    <label>借主解約予告</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>