force-app/main/default/objects/Matching__c/fields/BorrowerCancelNoticeUnit__c.field-meta.xml
<CustomField>
    <fullName>BorrowerCancelNoticeUnit__c</fullName>
    <label>借主解約予告_単位</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>月</fullName>
            </value>
            <value>
                <fullName>年</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>