force-app/main/default/objects/Matching__c/fields/BuiledingYear__c.field-meta.xml
<CustomField>
    <fullName>BuiledingYear__c</fullName>
    <label>築年</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>