force-app/main/default/objects/Matching__c/fields/ChargeDeposit__c.field-meta.xml
<CustomField>
    <fullName>ChargeDeposit__c</fullName>
    <label>請求敷金</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>