force-app/main/default/objects/Matching__c/fields/ClaimsTaxClassification__c.field-meta.xml
<CustomField>
    <fullName>ClaimsTaxClassification__c</fullName>
    <label>請求権利金税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>非課税</fullName>
            </value>
            <value>
                <fullName>未記載</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>