force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountBank3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBank3__c</fullName>
    <label>契約金送金口座3_銀行</label>
    <length>255</length>
    <type>Text</type>
</CustomField>