force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountBankNum1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBankNum1__c</fullName>
    <label>契約金送金口座1_銀行番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>