force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountBankNum3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBankNum3__c</fullName>
    <label>契約金送金口座3_銀行番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>