force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountBranchOffice3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBranchOffice3__c</fullName>
    <label>契約金送金口座3_支店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>