force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountBranchOfficeNum1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBranchOfficeNum1__c</fullName>
    <label>契約金送金口座1_支店番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>