force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountBranchOfficeNum2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBranchOfficeNum2__c</fullName>
    <label>契約金送金口座2_支店番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>