force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountBranchOfficeNum3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountBranchOfficeNum3__c</fullName>
    <label>契約金送金口座3_支店番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>