force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountContractor1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountContractor1__c</fullName>
    <label>契約金送金口座1_名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>