force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountContractor3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountContractor3__c</fullName>
    <label>契約金送金口座3_名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>