force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountContractorKana2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountContractorKana2__c</fullName>
    <label>契約金送金口座2_名義カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>