force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountId1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountId1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約金送金口座1_ID</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>マッチング</relationshipLabel>
    <relationshipName>MatchingBankRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>