force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountId2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountId2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約金送金口座2_ID</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>マッチング (契約金送金口座2_ID)</relationshipLabel>
    <relationshipName>MatchingBankRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>