force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountId3__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountId3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約金送金口座3_ID</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>マッチング (契約金送金口座3_ID)</relationshipLabel>
    <relationshipName>MatchingBankRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>