force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountNum2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountNum2__c</fullName>
    <label>契約金送金口座2_番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>