force-app/main/default/objects/Matching__c/fields/ContractMoneyBankAccountType2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBankAccountType2__c</fullName>
    <label>契約金送金口座2_種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountType</valueSetName>
    </valueSet>
</CustomField>