force-app/main/default/objects/Matching__c/fields/ContractMoneyRemittancePaymentAmount2__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRemittancePaymentAmount2__c</fullName>
    <label>契約金送金2_支払金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>