force-app/main/default/objects/Matching__c/fields/DepositAmortisation__c.field-meta.xml
<CustomField>
    <fullName>DepositAmortisation__c</fullName>
    <label>敷引/償却</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>