force-app/main/default/objects/Matching__c/fields/FloorPlanNum__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanNum__c</fullName>
    <label>間取_数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>