force-app/main/default/objects/Matching__c/fields/FloorPlanType__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanType__c</fullName>
    <label>間取_タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>LDK</fullName>
            </value>
            <value>
                <fullName>LDKS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>