force-app/main/default/objects/Matching__c/fields/FoursSetFilter__c.field-meta.xml
<CustomField>
    <fullName>FoursSetFilter__c</fullName>
    <label>四点セット振り分け</label>
    <length>255</length>
    <type>Text</type>
</CustomField>