force-app/main/default/objects/Matching__c/fields/IsSedimentDisasterWarningArea__c.field-meta.xml
<CustomField>
    <fullName>IsSedimentDisasterWarningArea__c</fullName>
    <label>土砂災害警戒区域内か否か</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>区域内</fullName>
            </value>
            <value>
                <fullName>区域外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>