force-app/main/default/objects/Matching__c/fields/NewMatter__c.field-meta.xml
<CustomField>
    <fullName>NewMatter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>新規</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>マッチング</relationshipLabel>
    <relationshipName>MatchingNewMatterRelation1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>