force-app/main/default/objects/Matching__c/fields/OtherBillingAmount3__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount3__c</fullName>
    <label>その他3請求金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>