force-app/main/default/objects/Matching__c/fields/OtherBillingAmount5__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount5__c</fullName>
    <label>その他5請求金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>