force-app/main/default/objects/Matching__c/fields/OtherBillingAmount6__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount6__c</fullName>
    <label>その他6請求金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>