force-app/main/default/objects/Matching__c/fields/OtherBillingExpenseItems6__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingExpenseItems6__c</fullName>
    <label>その他6請求費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>