force-app/main/default/objects/Matching__c/fields/OtherBillingTaxCategory6__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingTaxCategory6__c</fullName>
    <label>その他6請求税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>