force-app/main/default/objects/Matching__c/fields/OwnerAdress4__c.field-meta.xml
<CustomField>
    <fullName>OwnerAdress4__c</fullName>
    <label>家主4_住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>