force-app/main/default/objects/Matching__c/fields/OwnerCompanySummaryUrl2__c.field-meta.xml
<CustomField>
    <fullName>OwnerCompanySummaryUrl2__c</fullName>
    <label>家主2_会社概要のURL</label>
    <type>Url</type>
</CustomField>