force-app/main/default/objects/Matching__c/fields/OwnerCompanySummaryUrl3__c.field-meta.xml
<CustomField>
    <fullName>OwnerCompanySummaryUrl3__c</fullName>
    <label>家主3_会社概要のURL</label>
    <type>Url</type>
</CustomField>