force-app/main/default/objects/Matching__c/fields/OwnerCompanySummaryUrl4__c.field-meta.xml
<CustomField>
    <fullName>OwnerCompanySummaryUrl4__c</fullName>
    <label>家主4_会社概要のURL</label>
    <type>Url</type>
</CustomField>