force-app/main/default/objects/Matching__c/fields/OwnerEmail3__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail3__c</fullName>
    <label>家主3_メールアドレス</label>
    <type>Email</type>
</CustomField>