force-app/main/default/objects/Matching__c/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <label>家主_メールアドレス</label>
    <type>Email</type>
</CustomField>