force-app/main/default/objects/Matching__c/fields/OwnerFax2__c.field-meta.xml
<CustomField>
    <fullName>OwnerFax2__c</fullName>
    <label>家主2_FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>