force-app/main/default/objects/Matching__c/fields/OwnerFax3__c.field-meta.xml
<CustomField>
    <fullName>OwnerFax3__c</fullName>
    <label>家主3_FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>