force-app/main/default/objects/Matching__c/fields/OwnerInfoId__c.field-meta.xml
<CustomField>
    <fullName>OwnerInfoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家主情報情報_ID</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>マッチング</relationshipLabel>
    <relationshipName>MatchingOwnerRelation</relationshipName>
    <type>Lookup</type>
</CustomField>