force-app/main/default/objects/Matching__c/fields/OwnerInfoInfoId5__c.field-meta.xml
<CustomField>
    <fullName>OwnerInfoInfoId5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家主5情報情報_ID</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>マッチング (家主5情報情報_ID)</relationshipLabel>
    <relationshipName>MatchingOwnerRelation5</relationshipName>
    <type>Lookup</type>
</CustomField>