force-app/main/default/objects/Matching__c/fields/OwnerKana__c.field-meta.xml
<CustomField>
    <fullName>OwnerKana__c</fullName>
    <label>家主_名前カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>