force-app/main/default/objects/Matching__c/fields/OwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhone__c</fullName>
    <label>家主_TEL</label>
    <type>Phone</type>
</CustomField>