force-app/main/default/objects/Matching__c/fields/OwnerProxyHeadQuarterAdress__c.field-meta.xml
<CustomField>
    <fullName>OwnerProxyHeadQuarterAdress__c</fullName>
    <label>家主代理_本社住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>