force-app/main/default/objects/Matching__c/fields/OwnerProxyName__c.field-meta.xml
<CustomField>
    <fullName>OwnerProxyName__c</fullName>
    <label>家主代理_名前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>