force-app/main/default/objects/Matching__c/fields/OwnerProxyNameKana__c.field-meta.xml
<CustomField>
    <fullName>OwnerProxyNameKana__c</fullName>
    <label>家主代理_名前カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>