force-app/main/default/objects/Matching__c/fields/OwnerProxyZipCode__c.field-meta.xml
<CustomField>
    <fullName>OwnerProxyZipCode__c</fullName>
    <label>家主代理_郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>