force-app/main/default/objects/Matching__c/fields/OwnerZipCode4__c.field-meta.xml
<CustomField>
    <fullName>OwnerZipCode4__c</fullName>
    <label>家主4_郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>