force-app/main/default/objects/Matching__c/fields/OwnerZipCode__c.field-meta.xml
<CustomField>
    <fullName>OwnerZipCode__c</fullName>
    <label>家主_郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>