force-app/main/default/objects/Matching__c/fields/PaperType__c.field-meta.xml
<CustomField>
    <fullName>PaperType__c</fullName>
    <label>帳票種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>重説</fullName>
            </value>
            <value>
                <fullName>契約書</fullName>
            </value>
            <value>
                <fullName>請求書</fullName>
            </value>
            <value>
                <fullName>図面</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>