force-app/main/default/objects/Matching__c/fields/ParkingFeeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>ParkingFeeTaxCategory__c</fullName>
    <label>駐車場代_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>