force-app/main/default/objects/Matching__c/fields/PenaltyCost1__c.field-meta.xml
<CustomField>
    <fullName>PenaltyCost1__c</fullName>
    <label>違約金1_費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>