force-app/main/default/objects/Matching__c/fields/PenaltyCost3__c.field-meta.xml
<CustomField>
    <fullName>PenaltyCost3__c</fullName>
    <label>違約金3_費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>