force-app/main/default/objects/Matching__c/fields/PenaltyTermStart1__c.field-meta.xml
<CustomField>
    <fullName>PenaltyTermStart1__c</fullName>
    <label>違約金1_期間始まり</label>
    <type>Date</type>
</CustomField>