force-app/main/default/objects/Matching__c/fields/PenaltyTermStart3__c.field-meta.xml
<CustomField>
    <fullName>PenaltyTermStart3__c</fullName>
    <label>違約金3_期間始まり</label>
    <type>Date</type>
</CustomField>