force-app/main/default/objects/Matching__c/fields/RealEstateNameKana__c.field-meta.xml
<CustomField>
    <fullName>RealEstateNameKana__c</fullName>
    <label>物件名/駐車場名フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>