force-app/main/default/objects/Matching__c/fields/RenewalFee__c.field-meta.xml
<CustomField>
    <fullName>RenewalFee__c</fullName>
    <label>更新料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>