force-app/main/default/objects/Matching__c/fields/RentBankAccountBankNum__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountBankNum__c</fullName>
    <label>家賃送金口座_銀行番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>