force-app/main/default/objects/Matching__c/fields/RentBankAccountBranchOffice__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountBranchOffice__c</fullName>
    <label>家賃送金口座_支店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>