force-app/main/default/objects/Matching__c/fields/RentBankAccountBranchOfficeNum__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountBranchOfficeNum__c</fullName>
    <label>家賃送金口座_支店番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>