force-app/main/default/objects/Matching__c/fields/RentBankAccountContractor__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountContractor__c</fullName>
    <label>家賃送金口座_名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>