force-app/main/default/objects/Matching__c/fields/RentBankAccountId__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家賃送金口座_ID</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>マッチング (家賃送金口座_ID)</relationshipLabel>
    <relationshipName>MatchingBankRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>