force-app/main/default/objects/Matching__c/fields/RentBankAccountType__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountType__c</fullName>
    <label>家賃送金口座_種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountType</valueSetName>
    </valueSet>
</CustomField>