force-app/main/default/objects/Matching__c/fields/RentFixedCostAmount1__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostAmount1__c</fullName>
    <label>月額固定費1_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>