force-app/main/default/objects/Matching__c/fields/RentFixedCostAmount3__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostAmount3__c</fullName>
    <label>月額固定費3_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>