force-app/main/default/objects/Matching__c/fields/RentFixedCostExpenseItems2__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostExpenseItems2__c</fullName>
    <label>月額固定費2_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>