force-app/main/default/objects/Matching__c/fields/RentFixedCostTaxCategory2__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostTaxCategory2__c</fullName>
    <label>月額固定費2_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>