force-app/main/default/objects/Matching__c/fields/TaxableEntityName2__c.field-meta.xml
<CustomField>
    <fullName>TaxableEntityName2__c</fullName>
    <label>契約金送金口座2_課税事業者の氏名</label>
    <length>25</length>
    <type>Text</type>
</CustomField>