force-app/main/default/objects/Matching__c/fields/TaxableEntityName3__c.field-meta.xml
<CustomField>
    <fullName>TaxableEntityName3__c</fullName>
    <label>契約金送金口座3_課税事業者の氏名</label>
    <length>25</length>
    <type>Text</type>
</CustomField>