force-app/main/default/objects/Matching__c/fields/WinterPenaltyTerm__c.field-meta.xml
<CustomField>
    <fullName>WinterPenaltyTerm__c</fullName>
    <label>冬季違約金_期間</label>
    <type>Date</type>
</CustomField>