force-app/main/default/objects/Matching__c/recordTypes/Bill.recordType-meta.xml
<RecordType>
    <fullName>Bill</fullName>
    <active>true</active>
    <label>請求書</label>
</RecordType>