force-app/main/default/objects/Matching__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <label>契約書</label>
</RecordType>