force-app/main/default/objects/Matching__c/recordTypes/Drawing.recordType-meta.xml
<RecordType>
    <fullName>Drawing</fullName>
    <active>true</active>
    <label>図面</label>
</RecordType>