force-app/main/default/objects/Matching__c/recordTypes/Reexplanation.recordType-meta.xml
<RecordType>
    <fullName>Reexplanation</fullName>
    <active>true</active>
    <label>重説</label>
</RecordType>